--- a/Kurzfassung.tex
+++ b/Kurzfassung.tex
@@ -1,4 +1,4 @@
 \section*{Kurzfassung}
 Die Suche nach neuer Physik jenseits des Standardmodells der Teilchenphysik ist eines der Hauptziele des CMS-Experiments am CERN Large Hadron Collider. Zahlreiche Theorien, beispielsweise Supersymmetrie, beinhalten die m\"ogliche Produktion von neuen farbgeladenen Teilchen, welche als experimentelle Signatur Jets aufweisen. Deshalb ist es wichtig, ein gutes Verst\"andnis dieser Objekte zu erlangen, um derartige Suchen zu erm\"oglichen.\\
 Im ersten Teil dieser Arbeit wird eine Messung der Jet-Transversalimpuls-Aufl\"osung vorgestellt, welche auf der Analyse von Proton-Proton-Kollisionsdaten basiert, die bei einer Schwerpunktsenergie von $\sqrt{s}=8$\tev vom CMS-Experiment aufgezeichnet wurden. Die Messung basiert auf der Transversalimpulsbalance von Zweijet-Ereignissen auf Teilchenebene. Der Fokus liegt dabei auf der Bestimmung des Verh\"altnisses der Aufl\"osung in Daten zu der Aufl\"osung in simulierten Ereignissen, welches verwendet werden kann, um die Aufl\"osung in simulierten Ereignissen an die in Daten beobachtete anzupassen. Dieses Verh\"altnis wurde mit einer signifikant verbesserten Pr\"azision im Vergleich zu vorherigen Analysen f\"ur einen Pseudorapidit\"atsbereich von $0.0 \leq |\eta| \leq 5.0$ bestimmt. \\
-Der zweite Teil der Arbeit konzentriert sich auf Suchen nach Supersymmetrie unter Verwendung von Endzuständen mit zahlreichen Jets und fehlendem Transversalimpuls. Es wird eine Suche vorgestellt, die auf Kollisionsdaten basiert, welche bei einer Schwerpunktsenergie von $\sqrt{s}=8$\tev aufgezeichnet wurden, und auf Signaturen abzielt, welche haupts\"achlich sensitiv sind auf die Produktion von leichten-flavour Squarks und Gluinos, sowie die gluino-induzierte Produktion von Teilchen der dritten Generation. Die gr\"o{\ss}te Herausforderung ergibt sich in dieser Analyse durch eine genaue Bestimmung der Untergrundbeitr\"age aus Standardmodell Prozessen, da die Analyse in einem extremen kinematischen Phasenraum durchgef\"uhrt wird. Es wird eine Methode vorgstellt, die basierend auf der jet-\pt Response Untergrundbeitr\"age aus QCD Ereignissen absch\"atzt. Dar\"uberhinaus wird eingef\"uhrt, wie die Methode modifiziert werden kann, um Ereignisse mit hoher Jet-Multiplizit\"at korrekt vorherzusagen. In der Analyse werden Ergebnisse erzielt, die mit der Erwartung aus dem Standardmodell kompatibel sind. Damit wird die Produktion von leichten-flavour Squarks unter 780\gev und die von Gluinos unter 1,1--1,2\tev im Kontext von vereinfachten supersymmetrischen Modellen mit 95\% confidence level f\"ur eine Masse des leichtesten supersymmetrischen Teilchens (LSP) unter 100\gev ausgeschlossen. Weiterhin wird eine Studie basierend auf simulierten Ereignissen bei einer Schwerpunktsenergie von $\sqrt{s}=13$\tev vorgestellt, welche unterschiedliche Analysestrategien zur Identifikation von direkt produzierten Top-Squarks untersucht. Unter Verwendung von Algorithmen zur Identifikation von geboosteten hadronisch zerfallenden Top-Quarks aus den Zerf\"allen von Top-Squarks, kann mit derselben integrierten Luminosit\"at wie bei $\sqrt{s}=8$\tev aufgezeichnet wurden, eine Sensitivit\"at der Suche f\"ur Top Squark Massen bis 1\tev f\"ur LSP Massen unter 300\gev erreicht werden. Diese Selektion verbessert die Sensitivit\"at der Suche gegen\"uber bestehenden Analysen. Dar\"uberhinaus ist die identifizierte Selektion auch geeignet um gluino-induzierte Squarks der dritten Generation zu studieren und bietet einen komplement\"aren Ansatz zu existierenden Multijet-Analysen.      
+Der zweite Teil der Arbeit konzentriert sich auf Suchen nach Supersymmetrie unter Verwendung von Endzuständen mit zahlreichen Jets und fehlendem Transversalimpuls. Es wird eine Suche vorgestellt, die auf Kollisionsdaten basiert, welche bei einer Schwerpunktsenergie von $\sqrt{s}=8$\tev aufgezeichnet wurden, und auf Signaturen abzielt, welche haupts\"achlich sensitiv sind auf die Produktion von leichten-flavour Squarks und Gluinos, sowie die gluino-induzierte Produktion von Teilchen der dritten Generation. Die gr\"o{\ss}te Herausforderung ergibt sich in dieser Analyse durch eine genaue Bestimmung der Untergrundbeitr\"age aus Standardmodell Prozessen, da die Analyse in einem extremen kinematischen Phasenraum durchgef\"uhrt wird. Es wird eine Methode vorgstellt, die basierend auf der jet-\pt Response Untergrundbeitr\"age aus QCD Ereignissen absch\"atzt. Dar\"uberhinaus wird eingef\"uhrt, wie die Methode modifiziert werden kann, um Ereignisse mit hoher Jet-Multiplizit\"at korrekt vorherzusagen. In der Analyse werden Ergebnisse erzielt, die mit der Erwartung aus dem Standardmodell kompatibel sind. Damit wird die Produktion von leichten-flavour Squarks unter 780\gev und die von Gluinos unter 1,1--1,2\tev im Kontext von vereinfachten supersymmetrischen Modellen mit 95\% confidence level f\"ur eine Masse des leichtesten supersymmetrischen Teilchens (LSP) unter 100\gev ausgeschlossen. Weiterhin wird eine Studie basierend auf simulierten Ereignissen bei einer Schwerpunktsenergie von $\sqrt{s}=13$\tev vorgestellt, welche unterschiedliche Analysestrategien zur Identifikation von direkt produzierten Top-Squarks untersucht. Unter Verwendung von Algorithmen zur Identifikation von geboosteten hadronisch zerfallenden Top-Quarks aus den Zerf\"allen von Top-Squarks, kann mit derselben integrierten Luminosit\"at wie bei $\sqrt{s}=8$\tev aufgezeichnet wurden, eine Sensitivit\"at der Suche f\"ur Top Squark Massen bis 1\tev f\"ur LSP Massen unter etwa 300\gev erreicht werden. Diese Selektion verbessert die Sensitivit\"at der Suche gegen\"uber bestehenden Analysen. Dar\"uberhinaus ist die identifizierte Selektion auch geeignet um gluino-induzierte Squarks der dritten Generation zu studieren und bietet einen komplement\"aren Ansatz zu existierenden Multijet-Analysen.      
