--- a/Theory.tex
+++ b/Theory.tex
@@ -1,9 +1,9 @@
 The standard model of particle physics (SM) describes the fundamental particles and interactions between them. It is a theory that successfully predicted the existence of several particles and has been tested extensively, \eg in electroweak precision measurements at LEP. \\
-Although the SM is a successful theory, there are also some open questions which can not be answered within the SM. Thus, several theories have been developed to address problems which go beyond the SM. One of such extensions is supersymmetry (SUSY) for which, however, no experimental evidence has been found so far. \\
+Although the SM is a successful theory, there are also open questions which can not be answered within the SM. Thus, several theories have been developed to address problems which go beyond the SM. One of such extensions is supersymmetry (SUSY) for which, however, no experimental evidence has been found so far. \\
 After a short introduction to the phenomenology of the standard model, including a discussion of specific shortcomings, the basic concepts of supersymmetry are introduced in this chapter. In addition, general concepts of searches for supersymmetry at collider experiments are discussed together with a summary of the current status of the results of such searches which have been performed in the past.
 \section{The Standard Model of Particle Physics}
 \label{sec:sm}
-The SM comprises the elementary particles and their interactions~\cite{Agashe:2014kda}. In general, one distinguishes between two types of particles: fermions and bosons. While matter particles are fermions with half-integer spin, the fundamental forces are mediated via bosons, carrying integer spin. An overview of the contents of the SM is given in Fig.~\ref{fig:SM} where the particles are denoted together with their interactions\footnote{Gravity is not included in the standard model and thus it is not discussed in this thesis.}. 
+The SM comprises the elementary particles and their interactions~\cite{Agashe:2014kda}. In general, one distinguishes between two types of particles: fermions and bosons. While matter particles are fermions with half-integer spin, the fundamental forces are mediated via bosons, carrying integer spin. An overview of the contents of the SM is given in Fig.~\ref{fig:SM} in which the particles are denoted together with their interactions.\footnote{Gravity is not included in the standard model and thus it is not discussed in this thesis.} 
 \begin{figure}[!tp]
   \centering 
   \begin{tabular}{c}
@@ -116,7 +116,7 @@ Q \ket{\mathrm{fermion}} \, = \, Q \ket{\mathrm{boson}}, \hspace{20mm} Q \ket{\m
 \end{equation*}
 The supersymmetric fermionic and bosonic partner particles are called \textit{superpartners} and form together the irreducible representations of the supersymmetry algebra named \textit{supermultiplets} with the same number of fermionic and bosonic degrees of freedom. In case of unbroken supersymmetry, partner particles within one supermultiplet have the same mass as well as the same quantum numbers like electric charge, weak isospin and colour degrees of freedom, except for the spin. Commonly, supersymmetric particles are denoted \textit{sparticles}. \\
 \\
-In a general supersymmetric theory fulfilling the criteria of gauge invariance and renormalisability, processes are allowed which violate either lepton or baryon number conservation. However, a baryon and lepton number violation would imply for instance a rapid decay of protons. The recent lower limit on the proton lifetime is found to be $5.9 \times 10^{33}$ years at 90\% confidence level~\cite{PhysRevD.90.072005} and indicates that such processes must be suppressed. In order to achieve this, a new quantum number called \textit{R-parity} is introduced according to  
+In a general supersymmetric theory fulfilling the criteria of gauge invariance and renormalisability, processes are allowed which violate either lepton or baryon number conservation. However, a baryon and lepton number violation would imply for instance a rapid decay of protons. The lower limit on the proton lifetime is found to be $5.9 \times 10^{33}$ years at 90\% confidence level~\cite{PhysRevD.90.072005} and indicates that such processes must be suppressed. In order to achieve this, a new quantum number called \textit{R-parity} is introduced according to  
 \begin{equation*}
 R = (-1)^{3(B-L) + 2S}
 \end{equation*}
@@ -128,11 +128,11 @@ with baryon number $B$, lepton number $L$ and spin $S$. It is a multiplicative q
 A $R$-parity conserving supersymmetric theory provides some elegant solutions to open questions, as raised in Sec.~\ref{subsec:sm_shortcomings}:
 \begin{itemize}
  \item The Higgs mass suffers from quadratically divergent contributions arising from higher-order corrections caused by SM particles. However, since in SUSY each SM particle gets a supersymmetric partner, these higher order corrections cancel. For instance for the fermion contributions described in Eq.~\ref{eq:hierarchy}, the quadratically divergent terms are canceled by contributions with opposite sign that arise from a scalar with same mass and thus the same coupling strength to the Higgs field. Since the same cancelation occurs for bosons vice versa, SUSY is able to provide a solution to the hierarchy problem. However, no observation of such kind of supersymmetric particles with exact same masses as their SM correpondents has been made, such that supersymmetry in fact has to be a broken symmetry. In order to still be able to provide a solution to the hierarchy problem, supersymmetric particles are expected to be not heavier than $\mathcal{O}(\mathrm{1\tev})$, which is typically referred to as \textit{natural supersymmetry}. This is the main argument why one would expect masses of supersymmetric particles to be in the TeV range, well within the reach of the LHC. Some more considerations about natural SUSY follow in Sec.~\ref{subsec:natural_susy}.
- \item Considering the existence of supersymmetric particles, the coupling constants of the forces meet in one point when extrapolating the couplings from the electroweak to the GUT scale. This effect is illustrated in Fig.~\ref{fig:couplings}. It is visible that the evolution of the couplings is modified with respect to the SM at that energy scale where the supersymmetric particles enter. In general, this hints to the possibility of a grand unification.
+ \item Considering the existence of low scale supersymmetric particles, the coupling constants of the forces meet in one point when extrapolating the couplings from the electroweak to the GUT scale. This effect is illustrated in Fig.~\ref{fig:couplings}. It is visible that the evolution of the couplings is modified with respect to the SM at that energy scale where the supersymmetric particles enter. In general, this hints to the possibility of a grand unification.
 \begin{figure}[!t]
   \centering
   \begin{tabular}{c}
-    \includegraphics[width=0.6\textwidth]{figures/Couplings.jpg}
+    \includegraphics[width=0.55\textwidth]{figures/Couplings.jpg}
   \end{tabular}
   \caption{Comparison of the renormalization group evolution of the couplings $\alpha_{a}^{-1}$ in the SM (dashed lines) and the MSSM (solid lines) including two-loop effects. The masses of the supersymmetric particles in the MSSM are considered as a common threshold changing between 500\gev and 1.5\tev while the strong coupling constant $\alpha_{3}(m_{Z})$ is varied between 0.117 and 0.121. Taken from~\cite{Martin:1997ns}.}
   \label{fig:couplings}
@@ -145,19 +145,18 @@ A $R$-parity conserving supersymmetric theory provides some elegant solutions to
 \subsection{Natural Supersymmetry}
 \label{subsec:natural_susy}
 As introduced above, SUSY models are considered natural, if they provide a solution to the hierarchy problem. Commonly, certain measures are introduced to estimate the naturalness of a supersymmetric model. \\
-One example is the Veltman definition of naturalness~\cite{veltman1981infrared}. This states that radiative contributions should not exceed tree-level effects in size, regarding the mass of a scalar particle. \\
-Another definition is given by Babieri and Giudice~\cite{Barbieri198863} which do not restrict the magnitude of the radiative corrections, but the sensitivity of the physical mass of a scalar $m$ to small changes in the bare couplings $\lambda_0$. This constraint is often imposed by quantifying the amount of necessary fine-tuning $\Delta$ according to
+One example is the Veltman definition of naturalness~\cite{veltman1981infrared}. This states that radiative contributions should not exceed tree-level effects in size, regarding the mass of a scalar particle. Another definition is given by Babieri and Giudice~\cite{Barbieri198863} which do not restrict the magnitude of the radiative corrections, but the sensitivity of the physical mass of a scalar $m$ to small changes in the bare couplings $\lambda_0$. This constraint is often imposed by quantifying the amount of necessary fine-tuning $\Delta$ according to
 \begin{equation}
 \left| \frac{\lambda_0}{m^2}\frac{\partial m^2}{\partial \lambda_0} \right| < \Delta \; .
 \end{equation}
-While the value of $\Delta$ has been set to $\sim10$ in the past, it increased over the years such that also values of $\sim100$ or even $\sim1000$ are considered as reasonable values~\cite{Craig:2013cxa}. Such boundaries can be used in order to derive constraints on the spectrum of superpartners which regulate the hierarchy problem. Here, it turns out that not all sparticles are equally important and thus, not all have to be situated at the same mass scale. Some typical mass ranges for sparticles considered as natural are given in Sec.~\ref{subsec:mssm}. 
+While the value of $\Delta$ has been set to $\sim10$ in the past, it increased over the years such that also values of $\sim100$ or even $\sim1000$ are considered as reasonable values~\cite{Craig:2013cxa}. \\
+Such conditions can be used in order to derive constraints on the spectrum of superpartners which regulate the hierarchy problem. Here, it turns out that not all sparticles are equally important and thus, not all have to be situated at the same mass scale. Some typical mass ranges for sparticles considered as natural are given in Sec.~\ref{subsec:mssm}. 
 
 \subsection{The MSSM}
 \label{subsec:mssm}
-In general, it is possible to have theories with more than one supersymmetry transformation. However, the smallest possible supersymmetric extension of the SM including the full particle spectrum and interactions, \ie a $N = 1$ supersymmetry, is realised in the MSSM. An overview of the respective particle content is given in Tab.~\ref{tab:mssm_particles}. 
+In general, it is possible to have theories with more than one supersymmetry transformation $N$. However, the smallest possible supersymmetric extension of the SM including the full particle spectrum and interactions, \ie a $N = 1$ supersymmetry, is realised in the MSSM. An overview of the respective particle content is given in Tab.~\ref{tab:particle_content}. 
 \begin{table}[!t] 
   \centering
-  \label{tab:mssm_particles}
 %   \makebox[\linewidth]{
     \begin{tabular}{cccc}
 %      \hline
@@ -185,15 +184,16 @@ In general, it is possible to have theories with more than one supersymmetry tra
       \bottomrule
     \end{tabular}%}
  \caption{Supersymmetric particles contained in the MSSM neglecting mixing in the first two sfermion generations. Adapted from~\cite{Martin:1997ns}.} 
+  \label{tab:particle_content}
 \end{table}
-This extension is minimal in that sense that it introduces the least feasible number of additional particles to the existing SM particles meaning that each SM fermion gets one superpartner. The interactions and couplings of the supersymmetric particles are the same as for the SM counterparts. The different transformation of left- and right-handed fermions under the gauge groups implies the necessity to introduce separate superpartners for left- and right-handed states as well. These are arranged with their bosonic (spin 0) superpartner in a \textit{chiral} supermultiplet. The labels indicating the left- and right-handed states refer to the helicity of the respective SM particle. These supersymmetric partners of fermions are named \textit{sfermions} distinguishing between \textit{sleptons} and \textit{squarks}, the supersymmetric partners of leptons and quarks. In a similar manner, the SM gauge bosons are arranged in \textit{gauge} supermultiplets together with their fermionic (spin 1/2) supersymmetric correspondents. The SUSY partners of the gauge bosons are named \textit{gauginos} so that the superpartners in the gauge supermultiplets are the \textit{gluino}, \textit{wino} and \textit{bino}. The corresponding gaugino mixtures of the neutral wino and the bino are the \textit{photino} and the \textit{zino}. Furthermore, the supersymmetric particle spectrum is extended by another supermultiplet containing the graviton (spin 2) and the respective supersymmetric partner -- the \textit{gravitino} (spin 3/2). \\
-As described in Sec.~\ref{sec:sm}, masses arise in the SM from the concept of spontaneous symmetry breaking implying the existence of the Higgs boson. The supersymmetric partner of the Higgs boson is named \textit{higgsino}. While in the SM one Higgs doublet is sufficient to give mass to all particles, the Higgs sector needs to be extended in the MSSM. Here, two Higgs doublets are needed where one doublet $H_u$ gives mass to the up-type quarks and the other one $H_d$ to the down-type quarks, respectively. These two doublets have together eight degrees of freedom of which three are needed to give mass to the gauge bosons of the weak interaction as in the SM. This results in five physical Higgs bosons which are the two scalar Higgs particles $h^0, H^0$, the pseudoscalar $A^0$ as well as the charged Higgs bosons $H^{\pm}$. As further consequence, there are two vacuum expectation values $v_u$ and $v_d$ present, each assigned to one Higgs doublet, whose ratio $\mathrm{tan} \, \beta = v_u/v_d$ is a free parameter of the model. Within the MSSM the mass of the lightest Higgs boson is restricted to be smaller than the $Z$-boson mass at tree level. However, due to radiative corrections, which mainly arise from the top sector, this limit is enhanced and results in an upper bound of 
+This extension is minimal in the sense that it introduces the least feasible number of additional particles to the existing SM particles meaning that each SM fermion gets one superpartner. The interactions and couplings of the supersymmetric particles are the same as for the SM counterparts. The different transformation of left- and right-handed fermions under the gauge groups implies the necessity to introduce separate superpartners for left- and right-handed states as well. These are arranged with their bosonic (spin 0) superpartner in a \textit{chiral} supermultiplet. The labels indicating the left- and right-handed states refer to the helicity of the respective SM particle. These supersymmetric partners of fermions are named \textit{sfermions} distinguishing between \textit{sleptons} and \textit{squarks}, the supersymmetric partners of leptons and quarks. In a similar manner, the SM gauge bosons are arranged in \textit{gauge} supermultiplets together with their fermionic (spin 1/2) supersymmetric correspondents. The SUSY partners of the gauge bosons are named \textit{gauginos} so that the superpartners in the gauge supermultiplets are the \textit{gluino}, \textit{wino} and \textit{bino}. The corresponding gaugino mixtures of the neutral wino and the bino are the \textit{photino} and the \textit{zino}. Furthermore, the supersymmetric particle spectrum is extended by another supermultiplet containing the graviton (spin 2) and the respective supersymmetric partner -- the \textit{gravitino} (spin 3/2). \\
+As described in Sec.~\ref{sec:sm}, masses arise in the SM from the concept of spontaneous symmetry breaking implying the existence of the Higgs boson. The supersymmetric partner of the Higgs boson is named \textit{higgsino}. While in the SM one Higgs doublet is sufficient to give mass to all particles, the Higgs sector needs to be extended in the MSSM. Here, two Higgs doublets are needed where one doublet $H_u$ gives mass to the up-type quarks and the other one $H_d$ to the down-type quarks, respectively. These two doublets have together eight degrees of freedom of which three are needed to give mass to the gauge bosons of the weak interaction as in the SM. This results in five physical Higgs bosons which are the two scalar Higgs particles $h^0, H^0$, the pseudoscalar $A^0$ as well as the charged Higgs bosons $H^{\pm}$. As further consequence, there are two vacuum expectation values $v_u$ and $v_d$ present, each assigned to one Higgs doublet, whose ratio $\mathrm{tan} \, \beta = v_u/v_d$ is a free parameter of the model. Within the MSSM the mass of the lightest Higgs boson is restricted to be smaller than the $Z$-boson mass at tree level. However, due to radiative corrections, which mainly arise from the top sector, this limit is enhanced and results in an upper bound of~\cite{Martin:1997ns} 
 \begin{equation*}
 m_{h^0} \lesssim 135 \gev \; .
 \end{equation*}
 Consequently, significant contributions from the top squark mass are required to push the mass of the lightest Higgs boson up to a value of around 125\gev. This is somewhat in tension to the requirement of having a stop quark mass close to the top mass in order to solve the hierarchy problem. However, it is still possible to accommodate a Higgs mass of 125\gev without the necessity to decouple the top squark or add new dynamics to the MSSM. These scenarios are referred to as \textit{maximal mixing}~\cite{Djouadi:2005gj}. \\
 Similar to the SM, the gauge eigenstates of the SUSY theory are not necessarily equal to the mass eigenstates. A mixing occurs especially in the gaugino sector. Here, the neutral components of the bino and wino mix with the neutral higgsinos and form four mass eigenstates called \textit{neutralinos} $\tilde{\chi}^0$. Similarly, also the charged gauginos and higgsinos mix to the four \textit{charginos} $\tilde{\chi}^{\pm}$. Furthermore, mixing can also appear in the third squark and slepton generation. The mixing is supposed to be significant only for fermions of the third generation as the off-diagonal elements of the sfermion mass matrix are proportional to the mass of the respective SM partner. \\
-In order to obtain a natural realization of the MSSM, especially the superpartner of the top quark is expected to be not too heavy in order to be able to cancel the contributions from top loops to the Higgs mass. These give typically the largest contributions, since the top quark is the heaviest particle in the SM. Assuming a maximal accepted fine-tuning of $\Delta \lesssim 10$, the stop mass is supposed to be around 400\gev. Given these conditions, also light higgsinos are expected with a typical mass scale around 200\gev. Since gluinos yield loop corrections to the stop mass, they are expected to not significantly exceed the 1\tev range, as a second order effect~\cite{Craig:2013cxa}. 
+In order to obtain a natural realization of the MSSM, it is important that certain particles have a particular mass scale~\cite{Craig:2013cxa}. Especially the superpartner of the top quark is expected to be not too heavy, in order to be able to cancel the contributions from top loops to the Higgs mass. These give typically the largest contributions, since the top quark is the heaviest particle in the SM. Assuming a maximal accepted fine-tuning of $\Delta \lesssim 10$, the stop mass is supposed to be around 400\gev. Given these conditions, also light higgsinos are expected with a typical mass scale around 200\gev. Since gluinos yield loop corrections to the stop mass, they are expected to not significantly exceed the 1\tev range, as a second order effect. 
 
 \subsection{SUSY-Breaking}
 \label{subsec:susy_breaking}
@@ -205,7 +205,7 @@ In order to obtain a natural realization of the MSSM, especially the superpartne
   \caption{Evolution of scalar and gaugino mass parameters in the MSSM with mSUGRA boundary conditions imposed at $Q_0 = 2 \times 10^{16}$\gev. The parameter $\mu^2 + m^2_{H_{u}}$ runs negative, provoking electroweak symmetry breaking. Taken from~\cite{Martin:1997ns}.}
   \label{fig:MSSMrun}
 \end{figure}
-As discussed above, SUSY particles are expected to have the same mass as their corresponding SM partner particle. However, none of such particles has been observed so far which implies that supersymmetry in fact must be broken and that sparticles are actually heavier than the SM counterpart. If SUSY is expected to provide a solution to the hierarchy problem, the mass difference to the SM particles should consequently not be too large and the characteristic mass scale needs to be around 1\tev~\cite{Martin:1997ns}. \\
+As discussed above, SUSY particles are expected to have the same mass as their corresponding SM partner particle. However, none of such particles has been observed so far which implies that supersymmetry in fact must be broken and that sparticles are actually heavier than the SM counterparts. If SUSY is expected to provide a solution to the hierarchy problem, the mass difference to the SM particles should consequently not be too large and the characteristic mass scale needs to be around 1\tev~\cite{Martin:1997ns}. \\
 Typically, SUSY breaking is introduced such that so-called \textit{soft breaking} terms, \ie of positive mass dimension, are added to the theory in addition to the terms determining the gauge and Yukawa couplings. The SUSY breaking is assumed to take place in a hidden sector which does not couple directly to the visible sector represented by the supermultiplets. In this case, no specific breaking mechanism must be assumed, but only a mechanism to describe the mediation of the supersymmetry breaking from the hidden to the visible sector. In total, the MSSM including soft SUSY breaking features several new phases, mixing angles and masses which add another 105 free parameters to the already existing parameters of the SM~\cite{Dimopoulos:1995ju}.  \\
 Two SUSY breaking scenarios, that are often studied, are either based on gravity-mediated or gauge-mediated interactions and known as \textit{minimal supergravity} (mSUGRA)~\cite{Chamseddine:1982jx, AlvarezGaume:1983gj} or \textit{constrained MSSM} (CMSSM)~\cite{Kane:1993td, Baer:2002gm} and \textit{gauge-mediated supersymmetry breaking} (GMSB)~\cite{Dine:1981gu, AlvarezGaume:1981wy}. Assuming a specific breaking scenario usually allows to drastically reduce the number of free parameters in the theory and determines the phenomenology of the respective model. In case of mSUGRA/CMSSM, the whole model can be described by five parameters, which are the common scalar mass $m_0$ and the common mass of the gauginos and higgsinos $m_{1/2}$ at the GUT scale, the common trilinear coupling $A_0$, $\mathrm{tan} \, \beta = v_u/v_d$ and the sign of the higgsino mass parameter $\mu$. In Fig.~\ref{fig:MSSMrun} the evolution of the corresponding mass parameters to the electroweak scale are illustrated.  
 
