--- a/RA2.tex
+++ b/RA2.tex
@@ -743,7 +743,7 @@ in case of light-flavour squarks and
 \item (d) $\tilde{g} \rightarrow q\bar{q} + \tilde{\chi}_1^{\pm}/\tilde{\chi}_2^0 \;\; \mathrm{where} \;\; \tilde{\chi}_1^{\pm} \rightarrow W + \tilde{\chi}_1^0, \; \tilde{\chi}_2^0 \rightarrow Z + \tilde{\chi}_1^0 \;\; \mathrm{and} \;\; m_{\tilde{\chi}_1^{\pm}/\tilde{\chi}_2^0} = 0.5(m_{{\tilde{\chi}^0_1}} + m_{\tilde{g}})$ 
 \end{description}  
 for decays of the gluino. The branching ratios are assumed to be 100\% for the different decay modes, except for case (d) where the decay via $\tilde{\chi}_1^{+}$, $\tilde{\chi}_1^{-}$ and $\tilde{\chi}_2^0$ is considered with equal probabilities. \\
-Exclusion limits are derived with the modified $\mathrm{CL_s}$~\cite{0954-3899-28-10-313, Thomas1999435, bib:Higgs:CLS} approach and denote the 95\% confidence level (CL) upper limit on the production cross section of the signal. The profile likelihood ratio is used as test statistics which is derived from the combined likelihood calculated for all 36 search regions considering the uncertainties of the acceptance, efficiencies and uncertainties for the signal as well as the background predictions. The 36 search regions are assumed to be uncorrelated for all backgrounds except for QCD where they are assumed to be fully correlated. Furthermore, the statistical uncertainty of the control sample for the lost-lepton and hadronic-tau background is assumed to be fully correlated. The uncertainties considered for the signal acceptance and efficiency in the limit setting procedure are:  
+Exclusion limits are derived with the modified $\mathrm{CL_s}$~\cite{0954-3899-28-10-313, Thomas1999435, bib:Higgs:CLS} approach and denote the 95\% confidence level (CL) upper limit on the production cross section of the signal. The profile likelihood ratio is used as test statistics which is derived from the combined likelihood calculated for all 36 search regions considering the uncertainties of the acceptance, efficiencies and uncertainties for the signal as well as the background predictions. The statistical and systematic uncertainties of the QCD background are considered to be fully correlated while for other backgrounds and signal only each systematic uncertainty is treated as fully correlated among all the search regions. Furthermore, the statistical uncertainty of the lost-lepton and hadronic-tau background is assumed to be fully correlated for each bin, since both make use of a single muon control sample. The uncertainties considered for the signal acceptance and efficiency in the limit setting procedure are:  
 \begin{itemize} 
 \item 2.6\% uncertainty on the integrated luminosity~\cite{CMS-PAS-LUM-13-001}
 \item 2\% uncertainty for a possible trigger inefficiency (cf. Sec.~\ref{subsec:RA2_samples_trigger})
